--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "./node_modules/.bin/babel-node ./dev/webpack-server.js",
+    "dev": "./node_modules/.bin/babel-node ./dev/webpack-server.js --hot",
     "build": "NODE_ENV=production webpack --progress --profile --colors --config ./dev/webpack.config.babel.js"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
     "react": "15.3.2",
     "react-custom-scrollbars": "^4.0.0",
     "react-dom": "15.3.0",
+    "react-hot-loader": "^3.0.0-beta.7",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.0",
     "react-router-redux": "^4.0.5",
