--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "./node_modules/.bin/babel-node ./dev/webpack-server.js --hot",
-    "build": "NODE_ENV=production webpack --progress --profile --colors --config ./dev/webpack.config.babel.js"
+    "build": "webpack --progress --profile --colors --config ./dev/webpack.config.babel.js"
   },
   "dependencies": {
     "es6-promise": "^3.3.1",
